--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -12,26 +10,16 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script async defer src="./js/index.js"></script>
     <title>Frontend Mentor | Loopstudios landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <header class="header">
       <nav class="nav">
         <ul>
           <li>
-            <a href="#" class="logo">
-              <img src="./images/logo.svg" alt="" />
+            <a href="#">
+              <img class='logo' src="./images/logo.svg" alt="" />
             </a>
           </li>
         </ul>
@@ -62,14 +50,49 @@
               Support
             </a>
           </li>
-         
+        </ul>
+
+        <ul class="hamburger-container">
+          <li>
+            <img class="hamburger" src="./images/icon-hamburger.svg" alt="">
+          </li>
+        </ul>
+      </nav>
+
+      <nav class="mobile-menu">
+        <ul>
+          <li>
+            <a href="#" class="mobile-nav-links">
+              About
+            </a>
+          </li>
+          <li>
+            <a href="#" class="mobile-nav-links">
+              Careers
+            </a>
+          </li>
+          <li>
+            <a href="#" class="mobile-nav-links">
+              Events
+            </a>
+          </li>
+          <li>
+            <a href="#" class="mobile-nav-links">
+              Products
+            </a>
+          </li>
+          <li>
+            <a href="#" class="mobile-nav-links">
+              Support
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <section class="hero-container">
+      <div class="banner-overlay"></div>
       <img class="hero-banner" src="./images/desktop/image-hero.jpg" alt="" />
-
       <h1 class="hero">Immersive experiences that deliver</h1>
     </secti>
 
@@ -95,23 +118,145 @@
         <div class="creations-wrapper">
             <div class="creations-title-container">
               <h2 class="creations-title">Our Creations</h2>
+            </div>
               <button class="btn">
                 See All
               </button>
-            </div>
         </div>
     </section>
 
-  <!-- Our creations See all Deep
-    earth Night arcade Soccer team VR The grid From up above VR Pocket borealis
-    The curiosity Make it fisheye About Careers Events Products Support © 2021
-    Loopstudios. All rights reserved. -->
+    <section class="grid-container">
+      <ul class="grid-list">
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-deep-earth.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-deep-earth.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>Deep</figcaption>
+            <figcaption>Earth</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-night-arcade.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-night-arcade.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>Night</figcaption>
+            <figcaption>Arcade</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-soccer-team.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-soccer-team.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>Soccer</figcaption>
+            <figcaption>Team VR</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-grid.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-grid.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>The</figcaption>
+            <figcaption>Grid</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-from-above.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-from-above.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>From Up</figcaption>
+            <figcaption>Above VR</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-pocket-borealis.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-pocket-borealis.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>Pocket</figcaption>
+            <figcaption>Borealis</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-curiosity.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-curiosity.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>The</figcaption>
+            <figcaption>Curiosity</figcaption>
+          </div>
+        </li>
+        <li class="grid-item">
+          <div class="overlay"></div>
+          <img class="desktop-img" src="./images/desktop/image-fisheye.jpg" alt="">
+          <img class="mobile-img" src="./images/mobile/image-fisheye.jpg" alt="">
+          <div class="figcaption">
+            <figcaption>Make It</figcaption>
+            <figcaption>Fisheye</figcaption>
+          </div>
+        </li>
+      </ul>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+
+      <div class="mobile-btn-container">
+        <button class="mobile-btn">
+          See All
+        </button>
+      </div>
+    </section>
+
+
+
+    <footer class="footer-container">
+      <div class="footer-wrapper">
+          <nav class="footer-nav"> 
+            <ul>
+              <li>
+                <a href="#">
+                  <img class="footer-logo" src="./images/logo.svg" alt="">
+                </a>
+              </li>
+            </ul>
+
+            <ul class="footer-links">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </nav>
+  
+          <nav class="footer-nav-2">
+            <ul class="social-links">
+              <li><img src="./images/icon-facebook.svg" alt=""></li>
+              <li><img src="./images/icon-twitter.svg" alt=""></li>
+              <li><img src="./images/icon-pinterest.svg" alt=""></li>
+              <li><img src="./images/icon-instagram.svg" alt=""></li>
+            </ul>
+
+            <ul>
+              <li>
+                <p class="copyright">
+              © 2021 Loopstudios. All rights reserved.
+              </p>
+            </li>
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="https://linkedin.com/in/morelenyim">Mory Yim</a>.
+        </div>
+      </footer>
+      
   </body>
 </html>
