--- a/index.html
+++ b/index.html
@@ -19,72 +19,61 @@
         <ul>
           <li>
             <a href="#">
-              <img class='logo' src="./images/logo.svg" alt="" />
+              <img class="logo" src="./images/logo.svg" alt="" />
             </a>
           </li>
         </ul>
 
         <ul class="nav-links">
           <li>
-            <a href="#">
-              About
-            </a>
+            <a href="#"> About </a>
           </li>
           <li>
-            <a href="#">
-              Careers
-            </a>
+            <a href="#"> Careers </a>
           </li>
           <li>
-            <a href="#">
-              Events
-            </a>
+            <a href="#"> Events </a>
           </li>
           <li>
-            <a href="#">
-              Products
-            </a>
+            <a href="#"> Products </a>
           </li>
           <li>
-            <a href="#">
-              Support
-            </a>
+            <a href="#"> Support </a>
           </li>
         </ul>
 
         <ul class="hamburger-container">
           <li>
-            <img class="hamburger" src="./images/icon-hamburger.svg" alt="">
+            <img
+              class="hamburger"
+              src="./images/icon-hamburger.svg"
+              alt="hamburger"
+            />
+            <img
+              class="close-nav"
+              src="./images/icon-close.svg"
+              alt="close-nav"
+            />
           </li>
         </ul>
       </nav>
 
       <nav class="mobile-menu">
         <ul>
-          <li>
-            <a href="#" class="mobile-nav-links">
-              About
-            </a>
+          <li class="mobile-nav-links-item">
+            <a href="#" class="mobile-nav-links"> About </a>
           </li>
-          <li>
-            <a href="#" class="mobile-nav-links">
-              Careers
-            </a>
+          <li class="mobile-nav-links-item">
+            <a href="#" class="mobile-nav-links"> Careers </a>
           </li>
-          <li>
-            <a href="#" class="mobile-nav-links">
-              Events
-            </a>
+          <li class="mobile-nav-links-item">
+            <a href="#" class="mobile-nav-links"> Events </a>
           </li>
-          <li>
-            <a href="#" class="mobile-nav-links">
-              Products
-            </a>
+          <li class="mobile-nav-links-item">
+            <a href="#" class="mobile-nav-links"> Products </a>
           </li>
-          <li>
-            <a href="#" class="mobile-nav-links">
-              Support
-            </a>
+          <li class="mobile-nav-links-item">
+            <a href="#" class="mobile-nav-links"> Support </a>
           </li>
         </ul>
       </nav>
@@ -93,44 +82,58 @@
     <section class="hero-container">
       <div class="banner-overlay"></div>
       <img class="hero-banner" src="./images/desktop/image-hero.jpg" alt="" />
-      <h1 class="hero">Immersive experiences that deliver</h1>
-    </secti>
+    </section>
 
+    <section class="hero-wrapper">
+      <div class="hero-title">
+        <h1 class="hero">Immersive experiences that deliver</h1>
+      </div>
+    </section>
 
-
-    <section class="body-article">
-      <div class="article-img-container">
-          <img class="article-img" src="./images/desktop/image-interactive.jpg" alt="">
-        <article class="article-container">
+    <section class="article-container">
+      <div class="article-wrapper">
+        <div class="article-img-container">
+          <img
+            class="article-img"
+            src="./images/desktop/image-interactive.jpg"
+            alt=""
+          />
+        </div>
+        <article class="article">
           <h2 class="article-title">The Leader In Interactive VR</h2>
           <p class="article-content">
-            Founded in 2011, Loopstudios has been producing
-            world-class virtual reality projects for some of the best companies around
-            the globe. Our award-winning creations have transformed businesses through
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
             digital experiences that bind to their brand.
           </p>
         </article>
       </div>
     </section>
 
-
     <section class="creations-container">
-        <div class="creations-wrapper">
-            <div class="creations-title-container">
-              <h2 class="creations-title">Our Creations</h2>
-            </div>
-              <button class="btn">
-                See All
-              </button>
+      <div class="creations-wrapper">
+        <div class="creations-title-container">
+          <h2 class="creations-title">Our Creations</h2>
         </div>
+        <button class="btn">See All</button>
+      </div>
     </section>
 
     <section class="grid-container">
       <ul class="grid-list">
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-deep-earth.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-deep-earth.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-deep-earth.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-deep-earth.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>Deep</figcaption>
             <figcaption>Earth</figcaption>
@@ -138,8 +141,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-night-arcade.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-night-arcade.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-night-arcade.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-night-arcade.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>Night</figcaption>
             <figcaption>Arcade</figcaption>
@@ -147,8 +158,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-soccer-team.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-soccer-team.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-soccer-team.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-soccer-team.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>Soccer</figcaption>
             <figcaption>Team VR</figcaption>
@@ -156,8 +175,12 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-grid.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-grid.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-grid.jpg"
+            alt=""
+          />
+          <img class="mobile-img" src="./images/mobile/image-grid.jpg" alt="" />
           <div class="figcaption">
             <figcaption>The</figcaption>
             <figcaption>Grid</figcaption>
@@ -165,8 +188,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-from-above.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-from-above.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-from-above.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-from-above.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>From Up</figcaption>
             <figcaption>Above VR</figcaption>
@@ -174,8 +205,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-pocket-borealis.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-pocket-borealis.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-pocket-borealis.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-pocket-borealis.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>Pocket</figcaption>
             <figcaption>Borealis</figcaption>
@@ -183,8 +222,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-curiosity.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-curiosity.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-curiosity.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-curiosity.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>The</figcaption>
             <figcaption>Curiosity</figcaption>
@@ -192,8 +239,16 @@
         </li>
         <li class="grid-item">
           <div class="overlay"></div>
-          <img class="desktop-img" src="./images/desktop/image-fisheye.jpg" alt="">
-          <img class="mobile-img" src="./images/mobile/image-fisheye.jpg" alt="">
+          <img
+            class="desktop-img"
+            src="./images/desktop/image-fisheye.jpg"
+            alt=""
+          />
+          <img
+            class="mobile-img"
+            src="./images/mobile/image-fisheye.jpg"
+            alt=""
+          />
           <div class="figcaption">
             <figcaption>Make It</figcaption>
             <figcaption>Fisheye</figcaption>
@@ -201,62 +256,53 @@
         </li>
       </ul>
 
-
       <div class="mobile-btn-container">
-        <button class="mobile-btn">
-          See All
-        </button>
+        <button class="mobile-btn">See All</button>
       </div>
     </section>
 
-
-
     <footer class="footer-container">
       <div class="footer-wrapper">
-          <nav class="footer-nav"> 
-            <ul>
-              <li>
-                <a href="#">
-                  <img class="footer-logo" src="./images/logo.svg" alt="">
-                </a>
-              </li>
-            </ul>
-
-            <ul class="footer-links">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Support</a></li>
-            </ul>
-          </nav>
-  
-          <nav class="footer-nav-2">
-            <ul class="social-links">
-              <li><img src="./images/icon-facebook.svg" alt=""></li>
-              <li><img src="./images/icon-twitter.svg" alt=""></li>
-              <li><img src="./images/icon-pinterest.svg" alt=""></li>
-              <li><img src="./images/icon-instagram.svg" alt=""></li>
-            </ul>
-
-            <ul>
-              <li>
-                <p class="copyright">
-              © 2021 Loopstudios. All rights reserved.
-              </p>
+        <nav class="footer-nav">
+          <ul>
+            <li>
+              <a href="#">
+                <img class="footer-logo" src="./images/logo.svg" alt="" />
+              </a>
             </li>
-            </ul>
-          </nav>
+          </ul>
 
-        </div>
+          <ul class="footer-links">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Support</a></li>
+          </ul>
+        </nav>
 
-        <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="https://linkedin.com/in/morelenyim">Mory Yim</a>.
-        </div>
-      </footer>
-      
+        <nav class="footer-nav-2">
+          <ul class="social-links">
+            <li><img src="./images/icon-facebook.svg" alt="" /></li>
+            <li><img src="./images/icon-twitter.svg" alt="" /></li>
+            <li><img src="./images/icon-pinterest.svg" alt="" /></li>
+            <li><img src="./images/icon-instagram.svg" alt="" /></li>
+          </ul>
+
+          <ul>
+            <li>
+              <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://linkedin.com/in/morelenyim">Mory Yim</a>.
+      </div>
+    </footer>
   </body>
 </html>
